--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "@eslint/eslintrc": "^3"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
+  
 }
