--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev":   "next dev --turbopack",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint":  "next lint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next":      "15.4.5",
-    "react":     "19.1.0",
+    "next": "15.4.5",
+    "pdfjs-dist": "^5.4.54",
+    "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "tailwindcss":         "^4",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "eslint":              "^9",
-    "eslint-config-next":  "15.4.5",
-    "@eslint/eslintrc":    "^3"
+    "@types/node": "24.1.0",
+    "@types/react": "19.1.9",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.5",
+    "tailwindcss": "^4"
   }
 }
